# zephyrwerk-platform

./: .env.example  .gitignore  PLATFORM.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
ingestion/: s3_uploader.py  smard_client.py  weather_client.py
orchestration/: run_pipeline.py
tests/ingestion/: test_s3_uploader.py  test_smard_client.py  test_weather_client.py
