[project]
name = "zephyrwerk-platform"
version = "0.1.0"
description = "Production-grade energy analytics platform: SMARD ingestion → dbt → FastAPI → Streamlit → AWS"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Data ingestion
    "requests>=2.32",
    "pyarrow>=16.0",
    # AWS
    "boto3>=1.34",
    # Data processing
    "pandas>=2.2",
    # Database
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    # Dashboard
    "streamlit>=1.35",
    "plotly>=5.22",
    # ML
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "joblib>=1.4",
    # Utilities
    "python-dotenv>=1.0",
    "holidays>=0.46",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "moto[s3]>=5.0",
    "ruff>=0.4",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"